--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          path: SauceLabDemo  # Ensures repository is checked out in a single folder
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -24,17 +26,20 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: SauceLabDemo
 
       - name: Install Playwright
         run: npx playwright install
+        working-directory: SauceLabDemo
 
       - name: Execute Automation Tests
         run: npx playwright test
+        working-directory: SauceLabDemo
 
       - name: Upload Playwright Test Results (Artifacts)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report/
+          path: SauceLabDemo/playwright-report/
           retention-days: 7
