--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # ✅ Ensures correct repo checkout
+
+      - name: Debug Folder Structure
+        run: pwd && ls -R  # ✅ Check where files exist
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -23,18 +26,18 @@ jobs:
           node-version: 22
 
       - name: Install dependencies
-        run: npm install        
+        run: npm install
 
       - name: Install Playwright
-        run: npx playwright install        
+        run: npx playwright install
 
       - name: Execute Automation Tests
-        run: npx playwright test        
-
+        run: npx playwright test
+        
       - name: Upload Playwright Test Results (Artifacts)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: SauceLabDemo/playwright-report/
+          path: playwright-report/
           retention-days: 7
