--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "test": "playwright test",
-      "test:ui": "playwright test --ui",
-      "test:headed": "playwright test --headed",
-      "show-report": "playwright show-report"
+        "test": "playwright test",
+        "test:ui": "playwright test --ui",
+        "test:headed": "playwright test --headed",
+        "show-report": "playwright show-report"
     },
     "devDependencies": {
-      "@playwright/test": "^1.41.1",
-      "@types/node": "^20.11.5",
-      "typescript": "^5.3.3"
+        "@eslint/js": "^9.21.0",
+        "@playwright/test": "^1.41.1",
+        "@types/node": "^20.11.5",
+        "eslint": "^9.21.0",
+        "globals": "^16.0.0",
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^8.25.0"
     },
     "dependencies": {
-      "dotenv": "^16.4.7"
+        "dotenv": "^16.4.7"
     }
-  }
-  
+}
