Add faker library and generate fake data for customer name.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "typescript-eslint": "^8.25.0"
     },
     "dependencies": {
+        "@faker-js/faker": "^9.5.1",
         "dotenv": "^16.4.7"
     }
 }
