Update report dashboard.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,11 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 7
+
+      - name: Upload Playwright Dashboard Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-dashboard
+          path: playwright-report/dashboard.html
+          retention-days: 7
